@@ -1,3 +1,7 @@
+Mon Oct 14 17:23:20 1996    <layer@HOBART>
+
+	* fi-keys.el: fully qualify packages (db -> debugger)
+
 *******************************************************************************
 2.0.20.alpha.6 release for ACL on Windows
 *******************************************************************************
